<resources>
    <string name="app_name">Project2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world_text">0</string>
    <string name="toast_text">Toast</string>
    <string name="count_text">Count</string>
    <string name="random_text">Random</string>
    <string name="clear_text">Clear</string>
    <string name="interes_text">Хотел что-то интересное? Ну кликни на кнопочку.. Ладно, тут будет рандомное число от 0 до %1d</string>
    <string name="secondButton">Ну давай</string>
    <string name="nonono">Ни нада</string>
    <string name="randomSecond_text">R</string>
    <string name="click_next">Добро пожаловать! Добавьте фото</string>
    <string name="make_photo_text">Сделать фото</string>
    <string name="add_photo_text">Выбрать фото</string>
    <string name="rotate_text">Повернуть</string>
    <string name="new_photo_text">Новое фото</string>
</resources>
